# htcli

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TEST_SUITE_SUMMARY.md  coldkey  coldkey.pub  fix_remaining_tests.py  hypertensor_cli_implementation_guide.md  hypertensor_rpc_models.md  pyproject.toml  pytest.ini  run_tests.py  test_config.py  test_network_connection.py
docs/: API.md  AUTOMATED_FLOWS.md  CLI_USAGE_GUIDE.md  COMMANDS.md  COMMANDS_DOCUMENTATION.md  COMMANDS_REFERENCE.md  COMMANDS_SPREADSHEET.csv  COMMAND_RESTRUCTURE_SUMMARY.md  COMMAND_TESTING_RESULTS.md  COMMAND_TREE.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  CONFIGURATION.md  FIXED_TESTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NEW_COMMAND_STRUCTURE.md  NODE_MANAGEMENT.md  PASSWORD_USAGE.md  PERSONAL_ASSET_FILTERING.md  PROJECT_OVERVIEW.md  README.md  REAL_COMMANDS_TEST_RESULTS.md  STAKING.md  TENSOR_PRECISION_GUIDE.md  TESTING.md  TEST_DOCUMENTATION.md  TEST_UPDATE_SUMMARY.md  blockchain_commands_summary.md
htcli/: main.py
htcli/commands/: __init__.py  chain.py  docs.md  node.py  subnet.py  wallet.py
htcli/config/: wallet.py
htcli/core/: config.py  constants.py
htcli/core/config/: __init__.py  chain.py  htcli.py  subnet.py  wallet.py
htcli/hypertensor/substrate/: chain_functions.py  config.py
htcli/utils/: chain.py  chain_functions.py  crypto_pb2.py  helpers.py  subnet.py  substrate.py  wallet.py
src/htcli/: __init__.py  client.py  config.py  dependencies.py  main.py
src/htcli/client/: __init__.py  chain.py  subnet.py  wallet.py
src/htcli/commands/: __init__.py  chain.py  config.py  flow.py  my.py  node.py  stake.py  subnet.py  wallet.py
src/htcli/commands/chain/: __init__.py  info.py  query.py
src/htcli/commands/subnet/: __init__.py  manage.py  nodes.py  register.py
src/htcli/commands/wallet/: __init__.py  keys.py  staking.py
src/htcli/errors/: __init__.py  base.py  display.py  handlers.py
src/htcli/flows/: __init__.py  base.py  development_setup.py  migration_recovery.py  node_onboarding.py  staking_portfolio.py  subnet_deployment.py
src/htcli/guides/: wallet.py
src/htcli/helpers/: __init__.py  wallet.py
src/htcli/models/: __init__.py  errors.py  requests.py  responses.py
src/htcli/utils/: blockchain.py  colors.py  crypto.py  formatting.py  mnemonic.py  ownership.py  password.py  validation.py  wallet.py
tests/: README.md  conftest.py  make_hotkey.py  make_wallet.py  test_cli_simulation.py  test_wallet_cli.py  test_wallet_utils.py
tests/fixtures/: sample_data.py
tests/integration/: test_activation_requirements.py  test_cli_commands.py  test_cli_integration.py  test_network_connectivity.py  test_password_integration.py  test_stake_removal.py  test_staking_information.py
tests/unit/: test_chain_info.py  test_chain_operations.py  test_chain_query_fixed.py  test_flows.py  test_node_operations.py  test_password_management.py  test_staking_operations.py  test_subnet_manage_fixed.py  test_subnet_nodes.py  test_subnet_operations.py  test_subnet_register_fixed.py  test_wallet_keys.py  test_wallet_operations.py  test_wallet_staking_fixed.py
~/.hypertensor/wallets/: eleven.key  tenth.key
