[project]
name = "htcli"
version = "0.1.0"
description = "CLI to interact with Hypertensor"
authors = [{ name = "ultrashiny", email = "vasyl.123.000@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "typer[all] (>=0.15.3,<0.16.0)",
    "click (==8.0.4)",
    "cryptography (>=41.0.0)",
    "multihash (>=0.1.0)",
    "protobuf (==5.29.0)",
    "six (>=1.16.0)",
    "substrateinterface (>=1.0.0,<2.0.0)",
    "mnemonic (>=0.21,<0.22)",
    "pathlib (>=1.0.1,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
]

[project.urls]
repository = "https://github.com/shiftlayer-llc/htcli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
htcli = "htcli.main:app"
