[project]
name = "htcli"
version = "0.1.0"
description = "CLI to interact with Hypertensor"
authors = [{ name = "ultrashiny", email = "vasyl.123.000@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "typer[all]>=0.15.3,<0.16.0",
    "click==8.0.4",
    "cryptography>=41.0.0",
    "multihash>=0.1.0",
    "protobuf==5.29.0",
    "six>=1.16.0",
    "mnemonic>=0.21,<0.22",
    "pathlib>=1.0.1,<2.0.0",
    "logging>=0.4.9.6,<0.5.0.0",
    "substrate-interface>=1.7.11,<2.0.0",
    "requests>=2.32.4",
    "websockets>=15.0.1",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "psutil>=7.0.0",
    "ruff>=0.12.8",
]

[project.urls]
repository = "https://github.com/shiftlayer-llc/htcli"

[project.scripts]
htcli = "src.htcli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/**/*.py",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# uv specific configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.17.0",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "F403",  # star imports (used intentionally in some cases)
    "F405",  # star imports (used intentionally in some cases)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["F401", "F841"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
